--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <meta charset="utf-8">
 {% include seo.html %}
+<meta name="google-site-verification" content="JLC8BdiYMO-c7_pOml1ZBMUCfuLeZxa9b0MWWZnD57E" />
 <meta name="HandheldFriendly" content="True">
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
